Move routines to it4i-common.